Changelog

Fixed the "report is too long" message to the correct maximum limit: 100